<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="CRÉER UNE DÉPENSE"
                android:id="@+id/textTitreDepense"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:textStyle="bold"
                android:textSize="30dp"
                android:layout_marginBottom="5dp" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="1"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="Date :"
                    android:id="@+id/textView8"
                    android:autoText="false"
                    android:gravity="center_vertical"
                    android:textStyle="bold"
                    android:textSize="20dp"
                    android:layout_marginLeft="5dp" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="date"
                    android:ems="10"
                    android:id="@+id/editText_date"
                    android:focusable="false"
                    android:onClick="selectDate"
                    android:textColor="#a3a3a3"
                    android:layout_alignBottom="@+id/textView16"
                    android:layout_alignEnd="@+id/editTextMontant"
                    android:layout_alignStart="@+id/spinner_domaine"
                    android:layout_marginRight="20dp" />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="1"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="Montant :"
                    android:id="@+id/textMontant"
                    android:autoText="false"
                    android:gravity="center_vertical"
                    android:textStyle="bold"
                    android:textSize="20dp"
                    android:layout_marginLeft="5dp" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/editTextMontant"
                    android:layout_alignBottom="@+id/textMontant"
                    android:layout_marginRight="20dp"
                    android:textSize="14dp"
                    android:textColor="#888888"
                    android:layout_alignEnd="@+id/btnAjouterEnseigne"
                    android:inputType="numberDecimal"
                    android:layout_alignStart="@+id/spinner_domaine" />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:weightSum="1"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="Domaine :"
                    android:id="@+id/textView5"
                    android:autoText="false"
                    android:gravity="center_vertical"
                    android:textStyle="bold"
                    android:textSize="20dp"
                    android:layout_marginLeft="5dp" />

                <ImageButton
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:id="@+id/btnAjouterDomaine"
                    android:src="@android:drawable/ic_menu_add"
                    android:background="#0066d070"
                    android:adjustViewBounds="false"
                    android:layout_marginLeft="2dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp" />

                <Spinner
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:id="@+id/spinner_domaine"
                    android:layout_gravity="left" />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="Enseigne :"
                    android:id="@+id/textEnseigne"
                    android:autoText="false"
                    android:gravity="center_vertical"
                    android:textStyle="bold"
                    android:textSize="20dp"
                    android:layout_marginLeft="5dp" />

                <ImageButton
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:id="@+id/btnAjouterEnseigne"
                    android:src="@android:drawable/ic_menu_add"
                    android:backgroundTintMode="src_over"
                    android:background="#00ffffff"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp" />

                <Spinner
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:id="@+id/spinner_enseigne" />

            </LinearLayout>

            <RelativeLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/formPhoto"
                android:layout_marginTop="10dp">

                <Button
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="Prendre une photo"
                    android:id="@+id/buttonPrendrePhoto"
                    android:layout_gravity="left"
                    android:background="#0990d9"
                    style="?android:textAppearanceSmall"
                    android:layout_marginLeft="10dp" />

                <Button
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="Parcourir"
                    android:id="@+id/buttonParcourir"
                    android:layout_gravity="right"
                    android:layout_alignParentEnd="true"
                    android:background="#0990d9"
                    style="?android:textAppearanceSmall"
                    android:layout_marginRight="10dp" />
            </RelativeLayout>

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Garantie"
                android:id="@+id/CBGarantie"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone"
                android:id="@+id/form_garantie">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="Debut :"
                        android:id="@+id/textDebutGarantie"
                        android:autoText="false"
                        android:gravity="center_vertical"
                        android:textStyle="bold"
                        android:textSize="20dp"
                        android:layout_marginLeft="5dp" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="date"
                        android:ems="10"
                        android:id="@+id/editText_DebutGarantie"
                        android:focusable="false"
                        android:onClick="selectDate"
                        android:textColor="#a3a3a3"
                        android:layout_alignBottom="@+id/textView16"
                        android:layout_alignEnd="@+id/editTextMontant"
                        android:layout_alignStart="@+id/spinner_domaine"
                        android:layout_marginRight="20dp" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="Durée :"
                        android:id="@+id/text_DureeGarantie"
                        android:autoText="false"
                        android:gravity="center_vertical"
                        android:textStyle="bold"
                        android:textSize="20dp"
                        android:layout_marginLeft="5dp" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="date"
                        android:ems="10"
                        android:id="@+id/editText_DureeGarantie"
                        android:focusable="false"
                        android:onClick="selectDate"
                        android:textColor="#a3a3a3"
                        android:layout_alignBottom="@+id/textView16"
                        android:layout_alignEnd="@+id/editTextMontant"
                        android:layout_alignStart="@+id/spinner_domaine"
                        android:layout_marginRight="20dp" />
                </LinearLayout>
            </LinearLayout>

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Note de Frais"
                android:id="@+id/CBNoteDeFrais"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone"
                android:id="@+id/form_noteDeFrais" >

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="A COMPLETER"
                        android:id="@+id/textView6"
                        android:autoText="false"
                        android:gravity="center_vertical"
                        android:textStyle="bold"
                        android:textSize="20dp"
                        android:layout_marginLeft="5dp" />

                </LinearLayout>

            </LinearLayout>

            <Button
                style="?android:textAppearanceSmall"
                android:id="@+id/buttonValider"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="Valider"
                android:textStyle="bold"
                android:background="#66d070"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:onClick="tryToSendDepense" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>