<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Login_Activity"
    android:gravity="fill_vertical"
    android:backgroundTint="#82ffffff"
    android:backgroundTintMode="src_atop"
    android:baselineAligned="false">

    <!-- Login_Activity progress -->

    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="invisible"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="Connexion en cours..."
        android:id="@+id/text_connexion"
        android:layout_gravity="center_horizontal"
        android:visibility="invisible" />

    <LinearLayout
        android:id="@+id/email_login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="bottom"
        android:background="@drawable/rectangle_coins_arrondis_back"
        android:padding="20dp"
        android:layout_marginTop="10dp">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true"
                android:text="test@fn.fr" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_password"
                android:imeActionId="@+id/login"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"
                android:text="test" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/email_sign_in_button"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:text="Connexion"
            android:textStyle="bold"
            android:background="@drawable/rectangle_coin_arrondis_button" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="Pas encore membre ?"
                android:id="@+id/textView29" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/action_inscription"
                android:id="@+id/link_new_account"
                android:singleLine="false"
                android:layout_marginLeft="5dp" />
        </LinearLayout>

        <Button
            style="?android:textAppearanceSmall"
            android:id="@+id/btn_creer_compte"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="Créer un compte"
            android:textStyle="bold"
            android:background="@drawable/rectangle_coin_arrondis_button"
            android:visibility="gone" />

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="Aucune connexion internet trouvée."
            android:id="@+id/textHorsLigne"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:visibility="invisible" />

        <Button
            style="?android:textAppearanceSmall"
            android:id="@+id/buttonConnexionHorsLigne"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="Connexion hors ligne"
            android:textStyle="bold"
            android:background="@drawable/rectangle_coin_arrondis_button"
            android:padding="10dp"
            android:layout_gravity="center_horizontal"
            android:visibility="invisible" />
    </LinearLayout>

</LinearLayout>

